[Initial] remove minio folder
